Edited readme via GitHub

--- a/readme
+++ b/readme
@@ -28,7 +28,7 @@ Manual Installation
     DBpassword = 1234
 8) Insert the database Admin,City and Country in database 
 9) Go to your browser and enter http://localhost:8080/projecthl7
-10) Default Admin username and password is admin.
+10) Default Admin username and password is 1234.
 11) To deploy a webservice, use ANT to generate a Offlineexchange.war file and deploy to your tomcat server.
 12) To check whether a webservices are up and running got to the http://localhost:8080/Offlineexchange/services
 13) Then use Offlineexchangeclient to exchange to patient data.
